# NanoVgAndroid

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_fopen.c  android_fopen.h  gl_code.cpp
app/src/main/cpp/Box2D/: CMakeLists.txt
app/src/main/cpp/include/: NvgSample.h  Shapes.h  b2Renderer.h  b2Utils.h  bodyCreator.h
app/src/main/cpp/src/: NvgSample.cpp  Shapes.cpp  b2Renderer.cpp  bodyCreator.cpp
app/src/main/java/ru/egslava/hello_nanovg/: FileManActivity.java  FilesAdapter.java  JNI.java  MainActivity.java  MySurfaceView.java
app/src/main/res/drawable/: ic_folder_black_24dp.xml
app/src/main/res/layout/: activity_main.xml  file_activity.xml  file_item.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
